GNOME Bugzilla – Bug 762421
nm-applet sometimes crashes when clicking on the icon (nma_clear_icon/g_type_check_instance_is_fundamentally_a)
Last modified: 2016-03-11 18:14:12 UTC
Sometimes when clicking on the nm-applet icon, nm-applet crashes with a SIGSEGV. This is running under the MATE desktop. There is a similar report of a couple of users running Xfce over at RedHat's bugzilla (RH #1279937, 1284671). I've managed to grab a corefile -- this is the stack trace + some light navigation of the stack: (gdb) bt
+ Trace 235983
$6 = 0x1199ae0 [GtkIconTheme] (gdb) print applet->icon_layers[1] $7 = (GdkPixbuf *) 0x7f7ae185190f (gdb) print applet->icon_layers[0] $8 = (GdkPixbuf *) 0x0 (gdb) print applet $9 = 0x1199ae0 [GtkIconTheme] (gdb) print applet->fallback_icon $10 = (GdkPixbuf *) 0x0
fix in branch th/applet-icon-crash-bgo762421
Hi guys, I had similar crash with the same backtrace on debian sid. Your brach fixes the problem for me. Thanks! There is still a failing assert (occurs basically when old applet crashed) (nm-applet:4985): nm-applet-CRITICAL **: nma_icons_reload: assertion 'applet->isize > 0' failed Probably needs to handle this gracefully? For me, error occurs during screen reconfiguration.
(In reply to Jiri Horner from comment #2) > Hi guys, > > I had similar crash with the same backtrace on debian sid. Your brach fixes > the problem for me. Thanks! Thanks for testing! > There is still a failing assert (occurs basically when old applet crashed) > > (nm-applet:4985): nm-applet-CRITICAL **: nma_icons_reload: assertion > 'applet->isize > 0' failed > > Probably needs to handle this gracefully? Yes, this should be avoided. Strange that this can happen. Could you test the new patch on th/applet-icon-crash-bgo762421 and see if the CRITICAL is avoided? Instead you should see a WARNING in status_icon_size_changed_cb() about "size > 0". Thank you.
(branch ACKed via IRC by lrintel and bengal)
Branch merged to master as https://git.gnome.org/browse/network-manager-applet/commit/?id=65a594c0491fa1d0d27b6746222a8890fd04614a @Jiri, if you stil see the CRITICAL or the WARNING, please report to investigate this further. Thanks.
From quick testing, the issue seems fixed for me. Now I can't reproduce neither CRITICAL nor WARNING. Somehow strange (I was expecting WARNING), but whatever. Definitely segfault is fixed. Thanks again.
(In reply to Jiri Horner from comment #6) > From quick testing, the issue seems fixed for me. Now I can't reproduce > neither CRITICAL nor WARNING. Somehow strange (I was expecting WARNING), but > whatever. Definitely segfault is fixed. Thanks again. Thanks. If you hit either CRITICAL or WARNING again, please report back because no warnings should be raised during a program run.